--- a/package.json
+++ b/package.json
@@ -6,20 +6,20 @@
     "dev": "webpack serve -c webpack.config.js"
   },
   "license": "MIT",
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "@types/hyperscript": "^0.0.4",
+    "@types/virtual-dom": "^2.1.0",
     "css-loader": "^4.3.0",
     "html-webpack-plugin": "^4.5.0",
     "hyperscript-helpers": "^3.0.3",
-    "hyperscript": "^2.0.2",
     "style-loader": "^2.0.0",
     "tachyons": "^4.12.0",
     "ts-loader": "^8.0.4",
     "typescript": "^4.0.3",
+    "virtual-dom": "^2.1.1",
+    "webpack": "^5.0.0",
     "webpack-cli": "^4.0.0",
-    "webpack-dev-server": "^3.11.0",
-    "webpack": "^5.0.0"
+    "webpack-dev-server": "^3.11.0"
   }
 }
